--- a/lib/Stylesheet/styles.css
+++ b/lib/Stylesheet/styles.css
@@ -35,6 +35,23 @@ A:hover{
 	font-weight: bold;
 	border: 3px solid #000000;
 }
+
+table{
+	border: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+tr td{
+	cellpadding: 0;
+	CELLSPACING: 0;
+}
+
+.width570{
+	width: 570px;
+}
+
+
 .headText{
 	background-color: #000000;
 	color: #FFFFFF;
@@ -60,7 +77,7 @@ A:hover{
 	color: #000000;
 	border: 1px solid #000000;
 }
-.data{
+.data{  /* using inside td tr */
 	font-family: Tahoma, sans-serif;
 	font-size: 11px;
 	font-weight: normal;
@@ -68,7 +85,15 @@ A:hover{
 	vertical-align: top;
 	text-align: center;
 }
-
+.data550{  /* using inside td tr */
+	font-family: Tahoma, sans-serif;
+	font-size: 11px;
+	font-weight: normal;
+	color: #000000;
+	vertical-align: top;
+	text-align: center;
+	width: 550px;
+}
 
 .update{
 	font-family: Tahoma, sans-serif;
@@ -100,6 +125,14 @@ A:hover{
 	color: #FFFFFF;
 	border-bottom: 1px solid #AAAAAA;
 }
+.listDivide			{
+	font-family: Tahoma, sans-serif;
+	font-size: 1px;
+	color: #FFFFFF;
+	border-bottom: 1px solid #AAAAAA;
+	WIDTH: 550px;
+}
+
 .formMailbox{
 	font-family: Tahoma, sans-serif;
 	font-size: 11px;
